Mudei a foto do perfil

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <div class="container-foto">
             <div class="foto sombra-interna">
-                <img src="./src/image/foto-perfil.png" alt="Foto de perfil do Isaky Lopes">
+                <img src="./src/image/foto-perfil-portfolio.png" alt="Foto de perfil do Isaky Lopes">
             </div>
         </div>
     </section>
