--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <nav class="menu">
             <ul>
                 <li>
-                    <a href="#projetos">Meus projetos</a>
+                    <a href="#projetos" class="borda">Meus projetos</a>
                 </li>
             </ul>
         </nav>
