Adicionei responsividade e já criei uma pasta para o JS

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/responsivo.css">
 </head>
 
 <body>
@@ -104,8 +105,20 @@
                     </div>
                 </a>
             </div>
+
+            <div class="projeto ativo">
+                <a href="https://isaky11.github.io/Ninja-Script/" target="_blank">
+                    <img src="./src/image/chrome-capture-2025-5-5.png" alt="Ninja-Script">
+                    <h3>Profile Card</h3>
+                    <div class="informacoes-projeto">
+                        <p>Projeto interativo que apresenta personagens estilizados com imagens e descrições únicas. Os usuários podem alternar entre os personagens de forma dinâmica, explorando suas histórias e habilidades. O projeto é responsivo e inclui animações visuais para uma experiência imersiva.</p>
+                        <p>Veja a página 🔗</p>
+                    </div>
+                </a>
+            </div>
         </div>
     </section>
+    <script src="./src/js/index.js"></script>
 </body>
 
 </html>
