--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
     </header>
     <section class="home">
         <div class="informacoes">
-            <h1>Olá! Me chamo Isaky</h1>
-            <p>Sou um Desenvolvedor front-end em formação que adora tecnologia.</p>
-            <p>Estou sempre me desafiando com novos projetos e buscando feedback na comunidade de programação, além de
-                compartilhar meus conhecimentos. 😎 </p>
+            <h1>Olá! Sou o Isaky 👋</h1>
+<p>Desenvolvedor Front-End em formação, apaixonado por tecnologia e inovação.</p>
+<p>Atualmente, estudo e desenvolvo projetos com foco em <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>, buscando sempre criar interfaces acessíveis, responsivas e bem estruturadas.</p>
+<p>Gosto de me desafiar com novos projetos, aprender constantemente e trocar experiências com a comunidade dev. 🚀</p>
+
 
             <ul class="redes-sociais">
                 <li>
