--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="projeto ativo">
                 <a href="https://isaky11.github.io/Ninja-Script/" target="_blank">
                     <img src="./src/image/chrome-capture-2025-5-5.png" alt="Ninja-Script">
-                    <h3>Profile Card</h3>
+                    <h3>Ninja Script</h3>
                     <div class="informacoes-projeto">
                         <p>Projeto interativo que apresenta personagens estilizados com imagens e descrições únicas. Os usuários podem alternar entre os personagens de forma dinâmica, explorando suas histórias e habilidades. O projeto é responsivo e inclui animações visuais para uma experiência imersiva.</p>
                         <p>Veja a página 🔗</p>
